--- a/templates/nginx.conf.erb
+++ b/templates/nginx.conf.erb
@@ -1,5 +1,5 @@
 user <%= @user %> <%= @group %>;
-worker_processes 2;
+worker_processes <%= @worker_processes %>;
 worker_rlimit_nofile 4096;
 
 error_log /var/log/nginx/error.log;
